<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey" >
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back_title"
    android:padding="10dp"
    android:gravity="center_vertical" >

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_action_map"/>
     <TextView
        android:id="@+id/cityname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_toRightOf="@id/back"
        android:layout_centerVertical="true"
        android:layout_marginLeft="5dp"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="18sp"
        android:text="@string/app_name"/>
      <ImageView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:src="@drawable/setup"/>

</RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/white" >

            <ImageButton
                android:id="@+id/dealbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/deal_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title1" />
        </LinearLayout>

      <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/white" >

            <ImageButton
                android:id="@+id/dianpbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/comment_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title2" />
        </LinearLayout>

         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/white" >

            <ImageButton
                android:id="@+id/activitybtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/event_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title3" />
        </LinearLayout>

   <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/white" >

            <ImageButton
                android:id="@+id/appbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/app_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title4" />
        </LinearLayout>
    </LinearLayout>

 <com.hjq.widget.StickyLayout
		android:id="@+id/sticky_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_marginTop="0dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

    <com.bodong.dianjinweb.banner.DianJinBanner
        android:id="@+id/dianJinBaaner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </com.bodong.dianjinweb.banner.DianJinBanner>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:orientation="vertical" >

            <com.hjq.widget.PinnedHeaderExpandableListView
                android:id="@+id/expandablelist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="@null"
                android:childDivider="@drawable/child_bg"
                android:childIndicatorLeft="0dp"
                android:divider="@color/grey"
                android:dividerHeight="2dp"
                android:groupIndicator="@null"
                android:scrollbarAlwaysDrawHorizontalTrack="false" >
            </com.hjq.widget.PinnedHeaderExpandableListView>
        </LinearLayout>
    </com.hjq.widget.StickyLayout>
</LinearLayout>